## Process this file with automake to produce Makefile.in

# $Id: Makefile.am,v 1.4 2015/12/27 02:23:04 setlorg Exp $

EXTRA_DIST = \
 download.html                \
 freeglut.html                \
 freeglut_logo.png            \
 freeglut_user_interface.html \
 index.html                   \
 ogl_sm.png                   \
 progress.html                \
 structure.html

## Makefile.am ends here
